--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "copy:css": "copyfiles -u 1 ./src/css/**.css dist",
-        "copy:public": "copyfiles -u 1 ./src/public/**.* ./src/public/images/**.* dist",
+        "copy:public": "copyfiles -u 1 src/images/**.* dist",
         "copy:html": "copyfiles -u 1 ./src/*.html dist",
         "copy": "npm-run-all --parallel copy:*",
         "watch:public": "onchange \"./src/public/**.*\" -- npm run copy:public",
@@ -28,7 +28,7 @@
         "cssnano": "^7.0.7",
         "npm-run-all": "^4.1.5",
         "onchange": "^7.1.0",
-        "postcss": "^8.5.3",
+        "postcss": "^8.5.4",
         "postcss-cli": "^11.0.1",
         "sass": "^1.87.0"
     }
