--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "watch:public": "onchange \"./src/public/**.*\" -- npm run copy:public",
         "watch:html": "onchange \"./src/*.html\" -- npm run copy:html",
         "watch:css": "onchange \"./src/css/*.css\" -- npm run copy:css",
-        "watch:scss": "sass --no-source-map --watch src/css",
+        "watch:scss": "onchange \"./src/css/*.scss\" -- npm run build:css",
         "watch": "npm-run-all --parallel watch:*",
         "serve": "browser-sync start --config bs-config.js",
         "start": "npm-run-all copy --parallel watch serve",
         "build": "npm-run-all copy:html build:*",
+        "build:css": "sass src/css --no-source-map",
         "postbuild": "postcss dist/css/*.css -u autoprefixer cssnano -r --no-map"
     },
     "author": "D. Dean Neighbour",
